SalesForce/src/objects/AllField__c.object
<CustomObject>
    <description>This object has every single Field types from SF.</description>
    <fields>
        <fullName>AuttoNumberDemo__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>AuttoNumberDemo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CheckboxDemo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckboxDemo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrencyDemo__c</fullName>
        <label>CurrencyDemo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateDemo__c</fullName>
        <label>DateDemo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeDemo__c</fullName>
        <label>DateTimeDemo</label>
        <type>DateTime</type>
    </fields>
    <label>AllField</label>
    <nameField>
        <label>AllField Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>